--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
   <footer>
     <p>© 2025 Chaitra. Built with ❤️</p>
    <div class="social-icons">
-  <a href="https://instagram.com/chaitra" target="_blank"><i class="fab fa-instagram"></i></a>
-  <a href="https://facebook.com/chaitra" target="_blank"><i class="fab fa-facebook"></i></a>
-  <a href="https://twitter.com/yourprofile" target="_blank"><i class="fab fa-twitter"></i></a>
+  <a href="https://instagram.com/chaitra_alegaon.77" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://facebook.com/chaitra_alegaon.77" target="_blank"><i class="fab fa-facebook"></i></a>
   <a href="mailto:chaitravj5@gmail.com"><i class="fas fa-envelope"></i></a>
 </div>
 
@@ -140,3 +139,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
