--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a href="#contact" class="btn secondary">Let’s Connect</a>
     </div>
     <div class="hero-img-wrapper">
-      <img src="D:\2025_26\MY_PUBLICATION\Portfolio\images\chaitra.jpg" alt="Profile Picture" class="hero-img">
+      <img src="D:\2025_26\MY_PUBLICATION\Portfolio\images\cj.jpg" alt="Profile Picture" class="hero-img">
     </div>
   </section>
 
@@ -139,4 +139,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
