--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="card glass">
         <img src="images/book2.jpg" alt="Book 2">
-        <h3>Novel Writing</h3>
+        <h3>Catalyst</h3>
         <p>Storytelling is my passion ❤️. I write novels and stories inspired by human emotions,  
       experiences, and the world of science that surrounds us. </p>
       </div>
@@ -139,6 +139,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
