--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
       <div class="card glass">
         <img src="images/book2.jpg" alt="Book 2">
         <h3>Catalyst</h3>
-        <p>Storytelling is my passion ❤️. I write novels and stories inspired by human emotions,  
-      experiences, and the world of science that surrounds us. </p>
+        <p>It’s not just about love—it’s about how knowledge, passion, and emotions intermix in a young woman’s journey. </p>
       </div>
       <div class="card glass">
         <img src="images/book3.jpg" alt="Book 3">
@@ -139,6 +138,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
