--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2>Books & Publications</h2>
     <div class="cards-grid">
       <div class="card glass">
-        <img src="images/book1.jpg" alt="Book 1">
+        <img src="FALLING INTO_20250908_140042_0000.jpg" alt="Book 1">
         <h3>Falling Into Goodbye</h3>
         <p>My debut book — a heartfelt story of emotions, resilience, and human connections.</p>
       </div>
@@ -138,6 +138,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
