--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>My debut book — a heartfelt story of emotions, resilience, and human connections.</p>
       </div>
       <div class="card glass">
-        <img src="images/book2.jpg" alt="Book 2">
+        <img src="c.jpg" alt="Book 2">
         <h3>Catalyst</h3>
         <p>It’s not just about love—it’s about how knowledge, passion, and emotions intermix in a young woman’s journey. </p>
       </div>
@@ -138,6 +138,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
