--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Hero -->
   <section id="hero" class="fade-in">
     <div class="hero-content">
-      <h2>Hello, I’m <span>Chaitra</span> 👩‍🏫</h2>
+      <h2>Hello, I’m <span>Chaitra</span></h2>
       <p>
       <strong>Science Educator | Biology & Chemistry Expert | Author & Storyteller</strong>  
         <br><br>
@@ -138,6 +138,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
